Update dependencies (+ apply fixes from main branch) and fix issues with publishing